objects/Territory_Publish_Rule__c.object
<CustomObject>
    <description>Custom object where user is set flag when rules are ready to be published in CDS Assignment. The flag has been monitoring by BODI job . Once rules are published in CDS, the record will be updated by MW Integration user</description>
    <fields>
        <fullName>Pending_Rule_Publish__c</fullName>
        <label>Pending Rule Publish</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>REQUESTED</fullName>
                </value>
                <value>
                    <fullName>IN PROGRESS</fullName>
                </value>
                <value>
                    <fullName>COMPLETE</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rule_Identifier__c</fullName>
        <description>Unique identifier used by CDS to update the record once it&apos;s published</description>
        <label>Rule Identifier</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rules_Last_Published_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who last published assignment rules to be recalculated by CDS Assignment engine</description>
        <label>Rules Last Published By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_Publish_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rules_Last_Published_On__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Rules Last Published On</label>
        <type>DateTime</type>
    </fields>
    <label>Territory Publish Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rule_Identifier__c</columns>
        <columns>Pending_Rule_Publish__c</columns>
        <columns>Rules_Last_Published_On__c</columns>
        <columns>Rules_Last_Published_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TPR-{0000}</displayFormat>
        <label>Territory Publish Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Publish Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>